--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
     height: 2000px;
+    color: rgb(0, 0, 0);
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-ai-image%2Fpink-background-with-pink-background-pink-white-speck_254392963.htm&psig=AOvVaw2zTh-zAzZ2Q9riSddME96u&ust=1731457409932000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjt-qHE1YkDFQAAAAAdAAAAABAd);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
@@ -35,7 +38,11 @@ nav ul li a {
 
 main {
     padding: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+}
+
+h1, h2, h3 {
+    text-align: center;
 }
 
 footer {
@@ -49,12 +56,12 @@ footer {
 }
 
 form {
-    max-width: 600px;
+    max-width: 500px;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: var(--tam-raio-borda);
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -73,17 +80,31 @@ input[type="tel"] {
     border: 1px solid #ddd;
     border-radius: var(--tam-raio-borda-botoes);
     box-sizing: border-box;
-    align-items: center;
-    justify-content: space-between;
 }
 
+/* Ajuste para os campos de senha */
+.senha-container {
+    display: flex;
+    justify-content: space-between; /* Distribui os elementos igualmente */
+  }
+  
+  .senha-input {
+    width: 100%; /* Cada campo ocupará 48% da largura total */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+/* Botão de cadastro */
 form button {
-    padding: 10px 20px;
+    padding: 12px 20px;  /* Aumentar o tamanho do botão */
     background-color: #333;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;  /* Faz o botão ocupar toda a largura disponível */
+    margin-top: 20px;  /* Distância do botão em relação aos campos */
 }
 
 form button:hover {
@@ -92,6 +113,6 @@ form button:hover {
 
 iframe {
     width: 100%;
-    height: 600;
-    border: 0;
+    height: 600px;
+    border: 0px;
 }
